--- a/addressbook-web-tests/build.gradle
+++ b/addressbook-web-tests/build.gradle
@@ -7,4 +7,5 @@ repositories {
 dependencies {
     compile 'org.testng:testng:6.10'
     compile group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '2.53.1'
+    compile 'org.hamcrest:java-hamcrest:2.0.0.0'
 }
