6. 11. Протоколирование (лог-файлы)
Так же исправлена ошибка, где не подтягивались обновления из logback.

--- a/addressbook-web-tests/build.gradle
+++ b/addressbook-web-tests/build.gradle
@@ -15,7 +15,7 @@ dependencies {
 }
 
     task testGroups(type: Test) {
-    useTesNG {
+    useTestNG {
         suites 'src/test/resources/testing-groups.xml'
         }
         if (project.hasProperty('browser')){
@@ -28,7 +28,7 @@ dependencies {
     }
 
     task testContacts(type: Test) {
-    useTesNG {
+    useTestNG {
         suites 'src/test/resources/testing-contacts.xml'
         }
         if (project.hasProperty('browser')){
