--- a/mantis-tests/src/test/resources/local.properties
+++ b/mantis-tests/src/test/resources/local.properties
@@ -1,3 +1,7 @@
 web.baseUrl = http://localhost/MANTISBT-2.3.0/
 web.adminLogin = administrator
 web.adminPassword = root
+
+ftp.host = localhost
+ftp.login = mantis
+ftp.password = mantis
